# cppgir-gtk

./: README.md  cppgir-gtk.blp  cppgir-gtk.cpp  cppgir-gtk.gresource.xml  meson.build
gi/: meson.build
gi/cairo/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  cairo.cpp  cairo.hpp  cairo_impl.hpp  context.hpp  context_impl.hpp  device.hpp  device_impl.hpp  fontface.hpp  fontface_impl.hpp  fontoptions.hpp  fontoptions_impl.hpp  pattern.hpp  pattern_impl.hpp  rectangle.hpp  rectangle_impl.hpp  region.hpp  region_impl.hpp  scaledfont.hpp  scaledfont_impl.hpp  surface.hpp  surface_impl.hpp
gi/freetype2/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  freetype2.cpp  freetype2.hpp  freetype2_impl.hpp
gi/gdk/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  applaunchcontext.hpp  applaunchcontext_impl.hpp  cairocontext.hpp  cairocontext_impl.hpp  clipboard.hpp  clipboard_impl.hpp  contentdeserializer.hpp  contentdeserializer_impl.hpp  contentformats.hpp  contentformats_impl.hpp  contentformatsbuilder.hpp  contentformatsbuilder_impl.hpp  contentprovider.hpp  contentprovider_impl.hpp  contentserializer.hpp  contentserializer_impl.hpp  cursor.hpp  cursor_impl.hpp  device.hpp  device_impl.hpp  devicepad.hpp  devicepad_impl.hpp  devicetool.hpp  devicetool_impl.hpp  display.hpp  display_impl.hpp  displaymanager.hpp  displaymanager_impl.hpp  drag.hpp  drag_impl.hpp  dragsurface.hpp  dragsurface_impl.hpp  (+55 more)
gi/gdkpixbuf/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  gdkpixbuf.cpp  gdkpixbuf.hpp  gdkpixbuf_impl.hpp  pixbuf.hpp  pixbuf_impl.hpp  pixbufanimation.hpp  pixbufanimation_impl.hpp  pixbufanimationiter.hpp  pixbufanimationiter_impl.hpp  pixbufformat.hpp  pixbufformat_impl.hpp  pixbufloader.hpp  pixbufloader_impl.hpp  pixbufmodule.hpp  pixbufmodule_impl.hpp  pixbufmodulepattern.hpp  pixbufmodulepattern_impl.hpp  pixbufsimpleanim.hpp  pixbufsimpleanim_impl.hpp
gi/gio/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  action.hpp  action_impl.hpp  actionentry.hpp  actionentry_impl.hpp  actiongroup.hpp  actiongroup_impl.hpp  actionmap.hpp  actionmap_impl.hpp  appinfo.hpp  appinfo_impl.hpp  appinfomonitor.hpp  appinfomonitor_impl.hpp  applaunchcontext.hpp  applaunchcontext_impl.hpp  application.hpp  application_impl.hpp  applicationcommandline.hpp  applicationcommandline_impl.hpp  asyncinitable.hpp  asyncinitable_impl.hpp  asyncresult.hpp  asyncresult_impl.hpp  bufferedinputstream.hpp  bufferedinputstream_impl.hpp  bufferedoutputstream.hpp  bufferedoutputstream_impl.hpp  bytesicon.hpp  bytesicon_impl.hpp  cancellable.hpp  cancellable_impl.hpp  charsetconverter.hpp  charsetconverter_impl.hpp  (+315 more)
gi/glib/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  bookmarkfile.hpp  bookmarkfile_impl.hpp  bytearray.hpp  bytearray_impl.hpp  bytes.hpp  bytes_impl.hpp  checksum.hpp  checksum_impl.hpp  cond.hpp  cond_impl.hpp  date.hpp  date_impl.hpp  datetime.hpp  datetime_impl.hpp  debugkey.hpp  debugkey_impl.hpp  dir.hpp  dir_impl.hpp  glib.cpp  glib.hpp  glib_impl.hpp  hmac.hpp  hmac_impl.hpp  hook.hpp  hook_impl.hpp  hooklist.hpp  hooklist_impl.hpp  iochannel.hpp  iochannel_impl.hpp  iofuncs.hpp  iofuncs_impl.hpp  keyfile.hpp  (+91 more)
gi/gmodule/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  gmodule.cpp  gmodule.hpp  gmodule_impl.hpp
gi/gobject/: _callbacks.hpp  _callbacks_impl.hpp  _constants.hpp  _enums.hpp  _flags.hpp  _functions.hpp  _functions_impl.hpp  _types.hpp  binding.hpp  binding_impl.hpp  bindinggroup.hpp  bindinggroup_impl.hpp  cclosure.hpp  cclosure_impl.hpp  closure.hpp  closure_impl.hpp  closurenotifydata.hpp  closurenotifydata_impl.hpp  enumclass.hpp  enumclass_impl.hpp  enumvalue.hpp  enumvalue_impl.hpp  flagsclass.hpp  flagsclass_impl.hpp  flagsvalue.hpp  flagsvalue_impl.hpp  gobject.cpp  (+38 more)
(+815 files in other folders)
